--- a/demo/src/main/resources/easemob.properties
+++ b/demo/src/main/resources/easemob.properties
@@ -1,16 +1,16 @@
-#»·ĞÅÅäÖÃÎÄ¼ş
-appKey = 1114190416030063#quanhoo-im-test
-orgName = 1114190416030063
-appName = quanhoo-im-test
-clientId = YXA6u28nkGF2EemuVAUaOKX4Lw
-clientSecret = YXA6314LK67-gjYtTH2tjdnbmSrpdK0
+#ç¯ä¿¡é…ç½®æ–‡ä»¶
+appKey = 
+orgName = 
+appName = 
+clientId = 
+clientSecret = 
 
 easemobApi = http://a1.easemob.com
 
-#»·ĞÅ½Ó¿Ú
-#»ñÈ¡ÊÚÈ¨ĞÅÏ¢
+#ç¯ä¿¡æ¥å£
+#è·å–æˆæƒä¿¡æ¯
 token = http://a1.easemob.com/{0}/{1}/token
-#×¢²áÓÃ»§
+#æ³¨å†Œç”¨æˆ·
 registeredUser = http://a1.easemob.com/{0}/{1}/users
-#·¢ËÍĞÅÏ¢
+#å‘é€ä¿¡æ¯
 sendMessages = http://a1.easemob.com/{0}/{1}/messages
